ndb - bug#41353 - handle any order pk